fix: fix some problems about lombok